--- a/valentines.html
+++ b/valentines.html
@@ -279,7 +279,7 @@ yönetimi ve makine uyumluluğu konularında deneyim kazandım.
       animasyon yaparken kendimi özgür hissediyorum. Kod yazmak da son zamanlarda
       ilgimi çeken bir şey, bu konuda daha çok şey öğrenmek istiyorum. Bir yandan da
       örgü örmekle rahatlıyorum, büyük projeler yapmak oldukça keyifli. Dışarıda vakit
-      geçirmeyi seviyorum, motor sürmek ve yüzmek gibi aktivitelerle enerjimi toplarım.</p></li></section> </ul> 
+      geçirmeyi seviyorum, motor sürmek ve yüzmek gibi aktivitelerle enerjimi toplarım.</p></li> </ul> 
   </section>
   <section class="interests animated-border">
     <h2>Sosyal Medya Bağlantıları</h2>
